# sfp

./: .gitignore  README.md  TASK.md  THEORY.html  THEORY.md  main.py  pyproject.toml
notebooks/: physics.ipynb  viz.ipynb  viz2.ipynb
